Fixed calculator display overflow issue
Display when inputting a large number would
overflow past the flexbox, so I made the inner
container that held the text for the digits into
its own flex container, then aligned it to the
right with justify-content:end which made the
text content overflow to the left instead of then
right, and the overflow property to hide the
overflow from the box when the text content
overflows past the set width and height property.

--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ h1 {
 
 .display {
     display: flex;
-    justify-content: end;
     align-items: center;
     width: 668px;
     height: 142px;
@@ -58,6 +57,12 @@ h1 {
 }
 
 .displayContent {
+    display: flex;
+    justify-content: end;
+    align-items: center;
+    overflow: hidden;
+    width: 572px;
+    height: 90px;
     font-weight: 900;
     font-size: 60px;
 }
